--- a/views/.babelrc
+++ b/views/.babelrc
@@ -1,26 +1,35 @@
 {
   "presets": [
-    [ "env", {
-      "modules": false,
-      "targets": {
-        "browsers": [ "> 1%", "last 2 versions", "not ie <= 8" ]
+    [
+      "env",
+      {
+        "modules": false,
+        "targets": {
+          "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
+        }
       }
-    } ],
+    ],
     "stage-2"
   ],
   "plugins": [
     "transform-vue-jsx",
-    "transform-runtime", [ "component",
+    "transform-runtime",
+    [
+      "component",
       {
         "libraryName": "element-ui",
         "styleLibraryName": "theme-chalk"
+      },
+      {
+        "libraryName": "mint-ui",
+        "style": true
       }
     ]
   ],
   "env": {
     "test": {
-      "presets": [ "env", "stage-2" ],
-      "plugins": [ "transform-vue-jsx", "istanbul" ]
+      "presets": ["env", "stage-2"],
+      "plugins": ["transform-vue-jsx", "istanbul"]
     }
   }
 }
