--- a/views/package.json
+++ b/views/package.json
@@ -12,10 +12,12 @@
         "test": "npm run unit && npm run e2e",
         "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
         "build": "node build/build.js",
-        "log": "webpack --config ./build/webpack.dev.conf.js --colors --profile --display-modules --json > stats.json"
+        "log": "webpack --config ./build/webpack.dev.conf.js --colors --profile --display-modules",
+        "dll": "webpack --config ./build/webpack.dll.config.js --progress "
     },
     "dependencies": {
         "element-ui": "^2.4.8",
+        "html-webpack-inline-source-plugin": "0.0.10",
         "vue": "^2.5.2",
         "vue-lazyload": "^1.2.6",
         "vue-router": "^3.0.1",
