--- a/views/package.json
+++ b/views/package.json
@@ -24,6 +24,7 @@
         "vuex": "^3.0.1"
     },
     "devDependencies": {
+        "add-asset-html-webpack-plugin": "^2.1.3",
         "autoprefixer": "^7.1.2",
         "axios": "^0.18.0",
         "babel-core": "^6.22.1",
@@ -99,7 +100,7 @@
         "sinon-chai": "^2.8.0",
         "stylus": "^0.54.5",
         "stylus-loader": "^3.0.2",
-        "uglifyjs-webpack-plugin": "^1.1.1",
+        "uglifyjs-webpack-plugin": "^1.3.0",
         "url-loader": "^0.5.8",
         "vue-lazyload": "^1.2.6",
         "vue-loader": "^13.3.0",
