--- a/views/package.json
+++ b/views/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "element-ui": "^2.4.8",
+        "glob": "^7.1.3",
         "html-webpack-inline-source-plugin": "0.0.10",
         "vue": "^2.5.2",
         "vue-lazyload": "^1.2.6",
@@ -92,7 +93,7 @@
         "postcss-url": "^7.2.1",
         "postcss-viewport-units": "^0.1.6",
         "postcss-write-svg": "^3.0.1",
-        "rimraf": "^2.6.0",
+        "rimraf": "^2.6.2",
         "selenium-server": "^3.14.0",
         "semver": "^5.3.0",
         "shelljs": "^0.7.6",
