--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
     "private": true,
     "scripts": {
         "start": "node ./bin/www",
-        "dev": "node-dev ./bin/www"
+        "dev": "node-dev ./bin/www",
+        "syncdb": "node ./syncDataBase.js"
     },
     "dependencies": {
         "cookie-parser": "~1.4.3",
