--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,13 @@
         "cookie-parser": "~1.4.3",
         "debug": "~2.6.9",
         "express": "~4.16.0",
+        "formidable": "^1.2.1",
         "http-errors": "~1.6.2",
         "morgan": "~1.9.0",
         "mysql2": "^1.6.1",
         "pug": "2.0.0-beta11",
-        "sequelize": "^4.38.1"
+        "sequelize": "^4.38.1",
+        "uuid": "^3.3.2"
     },
     "devDependencies": {
         "file-stream-rotator": "^0.3.1",
