--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
     "private": true,
     "scripts": {
         "start": "node ./bin/www",
-        "dev": "node-dev ./bin/www",
+        "dev": "set NODE_ENV=development && node-dev ./bin/www",
+        "product": "set NODE_ENV=production && node ./bin/www",
         "syncdb:force": "node ./syncDataBase.js --force true",
         "syncdb": "node ./syncDataBase.js --force false"
     },
