--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,7 @@
         "start": "node ./bin/www",
         "dev": "set NODE_ENV=development && node-dev ./bin/www",
         "product": "set NODE_ENV=production && node ./bin/www",
-        "syncdb:force": "node ./syncDataBase.js --force true",
-        "syncdb": "node ./syncDataBase.js --force false"
+        "syncdb": "node ./syncDataBase.js "
     },
     "dependencies": {
         "cookie-parser": "~1.4.3",
