--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "start": "node ./bin/www",
+        "start": "set NODE_ENV=production && node ./bin/www",
         "dev": "set NODE_ENV=development && node-dev ./bin/www",
         "product": "set NODE_ENV=production && node ./bin/www",
         "syncdb": "node ./syncDataBase.js "
