--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "devDependencies": {
         "file-stream-rotator": "^0.3.1",
         "minimist": "^1.2.0",
-        "mysql": "^2.16.0"
+        "mysql": "^2.16.0",
+        "validator": "^10.10.0"
     }
 }
