--- a/views/package.json
+++ b/views/package.json
@@ -19,6 +19,7 @@
         "element-ui": "^2.4.8",
         "glob": "^7.1.3",
         "html-webpack-inline-source-plugin": "0.0.10",
+        "marked": "^0.6.0",
         "vue": "^2.5.2",
         "vue-lazyload": "^1.2.6",
         "vue-router": "^3.0.1",
