--- a/views/package.json
+++ b/views/package.json
@@ -17,7 +17,9 @@
     },
     "dependencies": {
         "element-ui": "^2.4.8",
+        "github-markdown-css": "^2.10.0",
         "glob": "^7.1.3",
+        "highlight.js": "^9.13.1",
         "html-webpack-inline-source-plugin": "0.0.10",
         "marked": "^0.6.0",
         "vue": "^2.5.2",
