--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
         "cookie-parser": "~1.4.3",
         "debug": "~2.6.9",
         "express": "~4.16.0",
+        "express-jwt": "^5.3.1",
         "express-session": "^1.15.6",
         "formidable": "^1.2.1",
         "http-errors": "~1.6.2",
