--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
         "express-session": "^1.15.6",
         "formidable": "^1.2.1",
         "http-errors": "~1.6.2",
-        "morgan": "~1.9.0",
+        "jsonwebtoken": "^8.4.0",
+        "morgan": "^1.9.1",
         "mysql2": "^1.6.1",
         "pug": "2.0.0-beta11",
         "sequelize": "^4.38.1",
