--- a/views/package.json
+++ b/views/package.json
@@ -24,7 +24,8 @@
         "md5": "^2.2.1",
         "vue": "^2.5.2",
         "vue-router": "^3.0.1",
-        "vuex": "^3.0.1"
+        "vuex": "^3.0.1",
+        "vux": "^2.9.2"
     },
     "devDependencies": {
         "add-asset-html-webpack-plugin": "^2.1.3",
@@ -58,6 +59,7 @@
         "eslint-config-standard": "^10.2.1",
         "eslint-config-vue": "^2.0.2",
         "eslint-friendly-formatter": "^3.0.0",
+        "eslint-import-resolver-webpack": "^0.11.0",
         "eslint-loader": "^1.7.1",
         "eslint-plugin-import": "^2.7.0",
         "eslint-plugin-node": "^5.2.0",
@@ -79,6 +81,8 @@
         "karma-sourcemap-loader": "^0.3.7",
         "karma-spec-reporter": "0.0.31",
         "karma-webpack": "^2.0.2",
+        "less": "^3.9.0",
+        "less-loader": "^4.1.0",
         "mint-ui": "^2.2.13",
         "mocha": "^3.2.0",
         "nightwatch": "^0.9.12",
@@ -109,6 +113,7 @@
         "vue-loader": "^13.3.0",
         "vue-style-loader": "^3.0.1",
         "vue-template-compiler": "^2.5.2",
+        "vux-loader": "^1.2.9",
         "webpack": "^3.12.0",
         "webpack-bundle-analyzer": "^2.9.0",
         "webpack-dev-server": "^2.11.3",
