--- a/views/package.json
+++ b/views/package.json
@@ -10,27 +10,30 @@
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
+    "lint": "eslint --fix --ext .js,.vue src",
     "build": "node build/build.js",
     "log": "webpack --config ./build/webpack.dev.conf.js --colors --profile --display-modules",
     "dll": "webpack --config ./build/webpack.dll.config.js --progress "
   },
   "dependencies": {
-    "github-markdown-css": "^2.10.0",
-    "glob": "^7.1.3",
-    "highlight.js": "^9.13.1",
-    "html-webpack-inline-source-plugin": "0.0.10",
+    "github-markdown-css": "^2.10.0",    
+    "highlight.js": "^9.13.1",    
     "marked": "^0.6.0",
     "md5": "^2.2.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "vux": "^2.9.2"
+    "vux": "^2.9.2",
+    "mint-ui": "^2.2.13",
+    "vue-lazyload": "^1.2.6",
+    "axios": "^0.18.0",
+    "better-scroll": "^1.15.2"
   },
   "devDependencies": {
+    "glob": "^7.1.3",
+    "html-webpack-inline-source-plugin": "0.0.10",
     "add-asset-html-webpack-plugin": "^2.1.3",
-    "autoprefixer": "^7.1.2",
-    "axios": "^0.18.0",
+    "autoprefixer": "^7.1.2",    
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -42,8 +45,7 @@
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "better-scroll": "^1.15.2",
+    "babel-register": "^6.22.0",    
     "chai": "^4.1.2",
     "chalk": "^2.0.1",
     "chromedriver": "^2.27.2",
@@ -56,6 +58,7 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-config-vue": "^2.0.2",
     "eslint-friendly-formatter": "^3.0.0",
@@ -83,8 +86,7 @@
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
     "less": "^3.9.0",
-    "less-loader": "^4.1.0",
-    "mint-ui": "^2.2.13",
+    "less-loader": "^4.1.0",    
     "mocha": "^3.2.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
@@ -109,8 +111,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.3.0",
-    "url-loader": "^0.5.8",
-    "vue-lazyload": "^1.2.6",
+    "url-loader": "^0.5.8",    
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
