--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
         "eslint": "^6.7.2",
         "eslint-config-airbnb-base": "^14.0.0",
         "eslint-config-prettier": "^6.7.0",
+        "eslint-plugin-import": "^2.19.1",
         "eslint-plugin-prettier": "^3.1.1",
         "file-stream-rotator": "^0.3.1",
         "minimist": "^1.2.0",
